# nl2shell

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  README.md  cli.py  pyproject.toml  requirements.txt  毕设计划.md
.github/workflows/: test.yml
core/: automation.py  command_analysis.py  command_review.py  decision.py  diagnostics.py  engine.py  error_analysis.py  execution.py  history.py  impact.py  input_session.py  llm.py  policy.py  preflight.py  redaction.py  safety.py  settings.py  ssh_config.py  structured_log.py  task_plan.py  verification.py
docs/: USER_MANUAL.md
docs/adr/: 0001-unified-command-review.md
eval/: compare.py  extended_cases.py  run_eval.py  testcases.json
tests/: test_automation.py  test_batch.py  test_cli_flow.py  test_command_analysis.py  test_command_review.py  test_decision.py  test_docker_integration.py  test_engine.py  test_error_analysis.py  test_eval_dataset.py  test_execution.py  test_history.py  test_impact.py  test_impact_policy.py  test_input_session.py  test_preflight.py  test_redaction.py  test_safety.py  test_settings.py  test_ssh_config.py  test_task_plan.py  test_verification.py
