[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2shell"
version = "0.2.0"
description = "安全可控的中文自然语言 Bash 助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "httpx[socks]>=0.25.0",
  "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "build>=1.0.0"]

[project.scripts]
nl2shell = "cli:entrypoint"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
